Test of height/with in highlighter img tag

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -568,7 +568,7 @@
                        <div class='svgimage'></div>
                        <div class='highlighter'>
                            <div id="{{ entry.uniquesvg }}-straightedge" class="straightedge"></div>
-                           <img src="/projects/{{ entry.highlighter }}" class="highlighterimg" />
+                           <img src="/projects/{{ entry.highlighter }}" height=953 width=609 class="highlighterimg" />
                        </div>
                        <div class='matchimage'>
                             {% comment %} <img src="{% static 'images/empty_match.svg' %}" /> {% endcomment %}
