Start on vertical straightedge

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -583,6 +583,7 @@
                 </div>
                 <div class="images">
                     <div class='imgparent' id='{{ entry.uniquesvg }}'>
+                        {% comment %} <div class="horizontal_straightedge"></div> {% endcomment %}
                        <div class='svgimage'></div>
                        <div class='highlighter'>
                            <div id="{{ entry.uniquesvg }}-straightedge" class="straightedge"></div>
