Increased width of annotation modal

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -260,7 +260,7 @@
 
         <!-- Generic modal for annotations -->
         <div class="modal fade" id="annotations_modal" tabindex="-1" role="dialog" aria-labelledby="annotations" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-scrollable" role="document">
+            <div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="annotations_modal_title">Modal title</h5>
