Removed "bonus" button for "color sequences by name"

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -273,7 +273,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal" id="annotations_close_button">Close</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="annotations_bonus_button">Bonus</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="annotations_bonus_button" hidden>Bonus</button>
                     <button type="button" class="btn btn-primary" id="annotations_modal_button">Save changes</button>
                 </div>
               </div>
