--- a/phylobook/templates/base.html
+++ b/phylobook/templates/base.html
@@ -22,6 +22,8 @@
         <script src="{% static 'script/d3.min.js' %}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
+        {% block header_content %}{% endblock %}
+        
         <title>Phylobook</title>
     </head>
 
