--- a/phylobook/projects/templates/import_project.html
+++ b/phylobook/projects/templates/import_project.html
@@ -21,13 +21,13 @@
         <div class="tab-content ">
             <div class="tab-pane active" id="1">
         <div class="tab-content tab-container">
-            <div class="tab-pane fade tab-summary-container active show border-primary border-left border-right border-bottom p-3 mb-3" id="new">
+            <div class="tab-pane fade tab-summary-container active show rounded-bottom border-primary border-left border-right border-bottom p-3 mb-3" id="new">
                 <div class="form-group">
                     <label for="new_outer_project_name">New Project Name:</label>
                     <input type="text" class="form-control" id="new_outer_project_name" placeholder="Enter project name...">
                 </div>
             </div>
-            <div class="tab-pane fade tab-summary-container border-primary border-left border-bottom border-right p-3 mb-3" id="add">
+            <div class="tab-pane fade tab-summary-container rounded-bottom border-primary border-left border-bottom border-right p-3 mb-3" id="add">
                 <div class="form-group">
                     <label for="add_outer_project_name">Add to Project Name:</label>
                     <select class="form-control" id="add_outer_project_name">
