--- a/phylobook/projects/templates/projects.html
+++ b/phylobook/projects/templates/projects.html
@@ -21,7 +21,7 @@ $( document ).ready(function() {
 </script>            
     
 <div class="container">
-    <a href="{% url "import_project" %}" type="button" class="btn btn-outline-primary btn-sm">Upload New Project</a><br><br>
+    <a href="{% url "import_project" %}" type="button" class="btn btn-outline-primary btn-sm">Upload Project Files</a><br><br>
     <div class="table-responsive">
         {% if noaccess %}
             <div class="alert alert-danger" role="alert">
