--- a/phylobook/templates/base.html
+++ b/phylobook/templates/base.html
@@ -5,6 +5,9 @@
     <head>
    		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
 
         {% load static %}
         <link rel="icon" href="{% static 'favicon.ico' %}"/>
