--- a/phylobook/templates/base.html
+++ b/phylobook/templates/base.html
@@ -23,7 +23,16 @@
         <script src="{% static 'script/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'script/tinymce.min.js' %}"></script>
         <script src="{% static 'script/d3.min.js' %}"></script>
+        <script src="{% static 'script/phylobook_status.js' %}"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
+
+        <!-- Set up JS stuff that needs to run at start -->
+        <script>
+            $(document).ready(function() {
+                window.processStatus = new processStatus();
+                setInterval(window.processStatus.update(), {{ settings.NOTIFICATION_UPDATE_INTERVAL }});
+            });
+        </script>
 
         {% block header_content %}{% endblock %}
         
@@ -54,6 +63,7 @@
                             </div>
                             {% endif %}
                         </div>
+                        <span id="processNotification"></span>
                         {% if request.user.is_staff %} (<a href="/admin">Admin</a>) {%endif %}&nbsp;&nbsp;&nbsp;
                         {% if settings.LOGIN_TYPE == "local" or settings.LOGIN_TYPE == "dual" %}
                             {% if user.has_usable_password == False or user.has_usable_password == None %}
