Added refresh button to processModal

--- a/phylobook/templates/base.html
+++ b/phylobook/templates/base.html
@@ -95,6 +95,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal" id="processCloseButton">Close</button>
+                    <button type="button" class="btn btn-primary" id="processModalRefreshButton">Refresh</button>
                 </div>
               </div>
             </div>
